--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             src="images/navbar.png"
             class="img-fluid"
             alt="REDSKY navbar logo"
+            width="30"
           />
         </a>
-
         <button
           class="navbar-toggler"
           type="button"
@@ -78,22 +78,21 @@
       </div>
     </nav>
     <div class="hero">
-      <h1>Welcome to</h1>
-
-      <img src="images/main.png" alt="REDSKY logo" />
-
-      <h3>This is an official website for REDSKY.</h3>
-
-      <div class="social-media">
-        <div class="d-flex justify-content-evenly">
-          <i class="fa-brands fa-instagram"
-            ><a
-              href="https://www.instagram.com/redsky.no/"
-              class="bt btn-branding"
-            ></a
-          ></i>
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-x-twitter"></i>
+      <div class="container">
+        <h1>Welcome to</h1>
+        <img src="images/main.png" alt="REDSKY logo" />
+        <p>This is an official website for REDSKY.</p>
+        <div class="social-media">
+          <div class="d-flex justify-content-evenly">
+            <i class="fa-brands fa-instagram"
+              ><a
+                href="https://www.instagram.com/redsky.no/"
+                class="bt btn-branding"
+              ></a
+            ></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+          </div>
         </div>
       </div>
     </div>
