edit html and icons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             src="images/navbar.png"
             class="img-fluid"
             alt="REDSKY navbar logo"
-            width="30"
+            width="70"
           />
         </a>
         <button
@@ -79,19 +79,26 @@
     </nav>
     <div class="hero">
       <div class="container">
-        <h1>Welcome to</h1>
-        <img src="images/main.png" alt="REDSKY logo" />
-        <p>This is an official website for REDSKY.</p>
+        <img src="images/main.png" class="main-logo" alt="REDSKY logo" />
+        <p class="introduction">The official website for REDSKY.no</p>
+
+        <p class="projects">
+          Upcoming projects by REDSKY will be announced soon.
+        </p>
         <div class="social-media">
           <div class="d-flex justify-content-evenly">
-            <i class="fa-brands fa-instagram"
-              ><a
-                href="https://www.instagram.com/redsky.no/"
-                class="bt btn-branding"
-              ></a
-            ></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-x-twitter"></i>
+            <a
+              href="https://www.instagram.com/redsky.no/"
+              class="bt btn-branding"
+            >
+              <i class="fa-brands fa-2x fa-instagram"></i>
+            </a>
+            <a href="#">
+              <i class="fa-brands fa-2x fa-linkedin"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-2x fa-x-twitter"></i>
+            </a>
           </div>
         </div>
       </div>
