--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="REDSKY official website" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -21,20 +21,7 @@
       src="https://kit.fontawesome.com/d8d89c7f5e.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&display=swap"
-      rel="stylesheet"
-    />
-    <title>REDSKY</title>
+    <title>About REDSKY</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -78,28 +65,41 @@
       </div>
     </nav>
     <div class="hero">
-      <div class="container">
-        <img src="images/main.png" class="main-logo" alt="REDSKY logo" />
-        <p class="introduction">The official website for REDSKY.no</p>
+      <h1 class="about-title">
+        About
+        <img src="images/about.png" alt="REDSKY About logo" width="150" />
+      </h1>
 
-        <p class="projects">
-          Upcoming projects by REDSKY will be announced soon.
-        </p>
-        <div class="social-media">
-          <div class="d-flex justify-content-evenly">
-            <a
-              href="https://www.instagram.com/redsky.no/"
-              class="bt btn-branding"
-            >
-              <i class="fa-brands fa-2x fa-instagram"></i>
-            </a>
-            <a href="#">
-              <i class="fa-brands fa-2x fa-linkedin"></i>
-            </a>
-            <a href="">
-              <i class="fa-brands fa-2x fa-x-twitter"></i>
-            </a>
-          </div>
+      <p class="redsky-description">
+        REDSKY's descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
+        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's description
+      </p>
+      <div class="social-media">
+        <div class="d-flex justify-content-evenly">
+          <a
+            href="https://www.instagram.com/redsky.no/"
+            class="bt btn-branding"
+          >
+            <i class="fa-brands fa-2x fa-instagram"></i>
+          </a>
+          <a href="#">
+            <i class="fa-brands fa-2x fa-linkedin"></i>
+          </a>
+          <a href="">
+            <i class="fa-brands fa-2x fa-x-twitter"></i>
+          </a>
         </div>
       </div>
     </div>
