--- a/index.html
+++ b/index.html
@@ -85,22 +85,24 @@
         <p class="projects">
           Upcoming projects by REDSKY will be announced soon.
         </p>
-        <div class="social-media">
-          <div class="d-flex justify-content-evenly">
-            <a
-              href="https://www.instagram.com/redsky.no/"
-              class="bt btn-branding"
-            >
-              <i class="fa-brands fa-2x fa-instagram"></i>
-            </a>
-            <a href="#">
-              <i class="fa-brands fa-2x fa-linkedin"></i>
-            </a>
-            <a href="">
-              <i class="fa-brands fa-2x fa-x-twitter"></i>
-            </a>
+        <footer>
+          <div class="social-media">
+            <div class="d-flex justify-content-evenly">
+              <a
+                href="https://www.instagram.com/redsky.no/"
+                class="bt btn-branding"
+              >
+                <i class="fa-brands fa-2x fa-instagram"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-2x fa-linkedin"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-2x fa-x-twitter"></i>
+              </a>
+            </div>
           </div>
-        </div>
+        </footer>
       </div>
     </div>
   </body>
