--- a/work.html
+++ b/work.html
@@ -66,9 +66,28 @@
     </nav>
     <div class="hero">
       <h1 class="work-projects">
-        About <img src="navbar.png" alt="REDSKY About logo" />
+        Projects by
+        <img src="images/about.png" alt="REDSKY About logo" width="150" />
       </h1>
       <p class="projects">These are our work projects</p>
     </div>
+    <footer>
+      <div class="social-media">
+        <div class="d-flex justify-content-evenly">
+          <a
+            href="https://www.instagram.com/redsky.no/"
+            class="bt btn-branding"
+          >
+            <i class="fa-brands fa-2x fa-instagram"></i>
+          </a>
+          <a href="#">
+            <i class="fa-brands fa-2x fa-linkedin"></i>
+          </a>
+          <a href="">
+            <i class="fa-brands fa-2x fa-x-twitter"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
