--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       src="https://kit.fontawesome.com/d8d89c7f5e.js"
       crossorigin="anonymous"
     ></script>
-    <title>Projects by REDSKY</title>
+    <title>Contact Page</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -66,10 +66,10 @@
     </nav>
     <div class="hero">
       <h1 class="work-projects">
-        Projects by
+        Contacts
         <img src="images/about.png" alt="REDSKY About logo" width="150" />
       </h1>
-      <p class="projects">These are our work projects</p>
+      >
     </div>
     <footer>
       <div class="social-media">
