added link to icon

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
             >
               <i class="fa-brands fa-2x fa-instagram"></i>
             </a>
-            <a href="#">
+            <a href="https://www.linkedin.com/in/redsky/">
               <i class="fa-brands fa-2x fa-linkedin"></i>
             </a>
             <a href="">
