--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,8 @@
     </nav>
     <div class="hero">
       <h1 class="work-projects">
-        Contacts
         <img src="images/about.png" alt="REDSKY About logo" width="150" />
+        Contact
       </h1>
       >
     </div>
@@ -80,7 +80,7 @@
           >
             <i class="fa-brands fa-2x fa-instagram"></i>
           </a>
-          <a href="#">
+          <a href="https://www.linkedin.com/in/redsky/">
             <i class="fa-brands fa-2x fa-linkedin"></i>
           </a>
           <a href="">
