fixed about html

--- a/about.html
+++ b/about.html
@@ -71,20 +71,14 @@
       </h1>
 
       <p class="redsky-description">
-        REDSKY's descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's
-        descriptionREDSKY's descriptionREDSKY's descriptionREDSKY's description
+        Welcome to REDSKY, a new and unparalleled fusion of cinematic
+        excellence, audion innovation and casting brilliance. At REDSKY, we are
+        not just a movie studio; we are a visionary and comprehensive
+        destination for the entire filmmaking journey.
+      </p>
+      <p>
+        REDSKY stands at the forefront of cinematic innovation, weaving
+        narratives that give an impact through our creative minds.
       </p>
       <footer>
         <div class="social-media">
