--- a/about.html
+++ b/about.html
@@ -78,7 +78,8 @@
       </p>
       <p>
         REDSKY stands at the forefront of cinematic innovation, weaving
-        narratives that give an impact through our creative minds.
+        narratives that give an immense impact to our audience through our
+        creative minds.
       </p>
       <footer>
         <div class="social-media">
