--- a/about.html
+++ b/about.html
@@ -79,7 +79,15 @@
       <p>
         REDSKY stands at the forefront of cinematic innovation, weaving
         narratives that give an immense impact to our audience through our
-        creative minds.
+        creative minds. Each of our work is a testament to our dedication to
+        redefining the cinematic perspective.
+      </p>
+      <p>
+        At REDSKY, we believe in pushing the boundaries of storytelling,
+        transcending conventional narratives to create unforgettable cinematic
+        experiences. Our team of passionate filmmakers, visionaries, and
+        storytellers collaborate to bring bold ideas to life, blending
+        cutting-edge technology with the artistry of filmmaking.
       </p>
       <footer>
         <div class="social-media">
