added container on about.html

--- a/about.html
+++ b/about.html
@@ -69,26 +69,28 @@
         About
         <img src="images/about.png" alt="REDSKY About logo" width="150" />
       </h1>
+      <div class="container">
+        <p class="redsky-description">
+          Welcome to REDSKY, a new and unparalleled fusion of cinematic
+          excellence, audion innovation and casting brilliance. At REDSKY, we
+          are not just a movie studio; we are a visionary and comprehensive
+          destination for the entire filmmaking journey.
+        </p>
+        <p>
+          REDSKY stands at the forefront of cinematic innovation, weaving
+          narratives that give an immense impact to our audience through our
+          creative minds. Each of our work is a testament to our dedication to
+          redefining the cinematic perspective.
+        </p>
+        <p>
+          At REDSKY, we believe in pushing the boundaries of storytelling,
+          transcending conventional narratives to create unforgettable cinematic
+          experiences. Our team of passionate filmmakers, visionaries, and
+          storytellers collaborate to bring bold ideas to life, blending
+          cutting-edge technology with the artistry of filmmaking.
+        </p>
+      </div>
 
-      <p class="redsky-description">
-        Welcome to REDSKY, a new and unparalleled fusion of cinematic
-        excellence, audion innovation and casting brilliance. At REDSKY, we are
-        not just a movie studio; we are a visionary and comprehensive
-        destination for the entire filmmaking journey.
-      </p>
-      <p>
-        REDSKY stands at the forefront of cinematic innovation, weaving
-        narratives that give an immense impact to our audience through our
-        creative minds. Each of our work is a testament to our dedication to
-        redefining the cinematic perspective.
-      </p>
-      <p>
-        At REDSKY, we believe in pushing the boundaries of storytelling,
-        transcending conventional narratives to create unforgettable cinematic
-        experiences. Our team of passionate filmmakers, visionaries, and
-        storytellers collaborate to bring bold ideas to life, blending
-        cutting-edge technology with the artistry of filmmaking.
-      </p>
       <footer>
         <div class="social-media">
           <div class="d-flex justify-content-evenly">
