--- a/about.html
+++ b/about.html
@@ -89,6 +89,15 @@
           storytellers collaborate to bring bold ideas to life, blending
           cutting-edge technology with the artistry of filmmaking.
         </p>
+        <p>
+          REDSKY has collaborated with many established and globally known
+          actors, writers, photographers and partners in the film industry from
+          Norway to America. From script to screen, audition room to casting
+          couch, REDSKY is your destination for cinematic brilliance, where
+          dreams are realized, and talent finds its true expression. Welcome to
+          REDSKY Studios - where every story begins, and every performance
+          becomes a masterpiece.
+        </p>
       </div>
 
       <footer>
