padding on about.html

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         About
         <img src="images/about.png" alt="REDSKY About logo" width="150" />
       </h1>
-      <div class="container">
+      <div class="container-about">
         <p class="redsky-description">
           Welcome to REDSKY, a new and unparalleled fusion of cinematic
           excellence, audion innovation and casting brilliance. At REDSKY, we
