--- a/about.html
+++ b/about.html
@@ -91,12 +91,12 @@
         </p>
         <p>
           REDSKY has collaborated with many established and globally known
-          actors, writers, photographers and partners in the film industry from
-          Norway to America. From script to screen, audition room to casting
-          couch, REDSKY is your destination for cinematic brilliance, where
-          dreams are realized, and talent finds its true expression. Welcome to
-          REDSKY Studios - where every story begins, and every performance
-          becomes a masterpiece.
+          actors, writers, photographers, audio engineers, artists and partners
+          in the film industry from Norway, Spain and America. From script to
+          screen, audition to casting, REDSKY is your destination for cinematic
+          expertise, where dreams are realized, and talents find their true
+          expressions. Welcome to REDSKY Studios - where every story begins, and
+          every performance becomes a masterpiece.
         </p>
       </div>
 
