deleted about title

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About REDSKY</a>
+              <a class="nav-link" href="about.html">REDSKY</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="work.html">Our Work</a>
