--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">REDSKY</a>
+              <a class="nav-link" href="about.html">About REDSKY</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="work.html">Our Work</a>
@@ -66,7 +66,6 @@
     </nav>
     <div class="hero">
       <h1 class="about-title">
-        About
         <img src="images/about.png" alt="REDSKY About logo" width="150" />
       </h1>
       <div class="container-about">
