fixed padding, about, index

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
       <h1 class="about-title">
         <img src="images/about.png" alt="REDSKY About logo" width="150" />
       </h1>
-      <div class="container-about">
+      <div class="content">
         <p class="redsky-description">
           Welcome to REDSKY, a new and unparalleled fusion of cinematic
           excellence, audion innovation and casting brilliance. At REDSKY, we
