--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
     </nav>
     <div class="hero">
-      <div class="container-home">
+      <div class="home-container container">
         <img src="images/main.png" class="main-logo" alt="REDSKY logo" />
         <p class="introduction">The official website for REDSKY.no</p>
 
