--- a/work.html
+++ b/work.html
@@ -64,12 +64,90 @@
         </div>
       </div>
     </nav>
-    <div class="hero">
-      <h1 class="work-projects">
-        Projects by
-        <img src="images/about.png" alt="REDSKY About logo" width="150" />
-      </h1>
-      <p class="projects">These are our work projects</p>
+    <div class="content-container container">
+      <div class="content">
+        <h1>
+          <img src="images/about.png" alt="REDSKY About logo" width="150" />
+        </h1>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 mb-4">
+          <img
+            src="images/tangles senses_short.jpg"
+            class="img-fluid"
+            alt="Tangles Senses"
+          />
+          <h3 class="text-center mb-0">Tangles Senses(short)</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img
+            src="images/a_walk_in_the_park.jpg"
+            class="img-fluid"
+            alt="A Walk in the Park"
+          />
+          <h3 class="text-center mb-0">A Walk In The Park</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img src="images/amsterdam.jpg" class="img-fluid" alt="Amsterdam" />
+          <h3 class="text-center mb-0">Amsterdam</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img src="images/bermuda.jpg" class="img-fluid" alt="Bermuda" />
+          <h3 class="text-center mb-0">Bermuda</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img src="images/grace.jpg" class="img-fluid" alt="Grace" />
+          <h3 class="text-center mb-0">Grace</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img
+            src="images/misunderstood.jpg"
+            class="img-fluid"
+            alt="Misunderstood"
+          />
+          <h3 class="text-center mb-0">Misunderstood</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img
+            src="images/phillipInes.jpg"
+            class="img-fluid"
+            alt="phillip:Ines"
+          />
+          <h3 class="text-center mb-0">phillip:Ines</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img src="images/sorry.jpg" class="img-fluid" alt="Sorry" />
+          <h3 class="text-center mb-0">Sorry</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img
+            src="images/the Last Man in Laos.jpg"
+            class="img-fluid"
+            alt="The Last Man In Laos"
+          />
+          <h3 class="text-center mb-0">The Last Man In Laos</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img
+            src="images/the Long Way Home.jpg"
+            class="img-fluid"
+            alt="The Long Way Home"
+          />
+          <h3 class="text-center mb-0">The Long Way Home</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img
+            src="images/when are you coming home.jpg"
+            class="img-fluid"
+            alt="When Are You Coming Home"
+          />
+          <h3 class="text-center mb-0">When Are You Coming Home</h3>
+        </div>
+        <div class="col-sm-4 mb-4">
+          <img src="images/lollipop.jpg" class="img-fluid" alt="Lollipop" />
+          <h3 class="text-center mb-0">Lollipop</h3>
+        </div>
+      </div>
     </div>
     <footer>
       <div class="social-media">
