--- a/about.html
+++ b/about.html
@@ -68,36 +68,36 @@
       <h1 class="about-title">
         <img src="images/about.png" alt="REDSKY About logo" width="150" />
       </h1>
-      <div class="content">
-        <p class="redsky-description">
-          Welcome to REDSKY, a new and unparalleled fusion of cinematic
-          excellence, audion innovation and casting brilliance. At REDSKY, we
-          are not just a movie studio; we are a visionary and comprehensive
-          destination for the entire filmmaking journey.
-        </p>
-        <p>
-          REDSKY stands at the forefront of cinematic innovation, weaving
-          narratives that give an immense impact to our audience through our
-          creative minds. Each of our work is a testament to our dedication to
-          redefining the cinematic perspective.
-        </p>
-        <p>
-          At REDSKY, we believe in pushing the boundaries of storytelling,
-          transcending conventional narratives to create unforgettable cinematic
-          experiences. Our team of passionate filmmakers, visionaries, and
-          storytellers collaborate to bring bold ideas to life, blending
-          cutting-edge technology with the artistry of filmmaking.
-        </p>
-        <p>
-          REDSKY has collaborated with many established and globally known
-          actors, writers, photographers, audio engineers, artists and partners
-          in the film industry from Norway, Spain and America. From script to
-          screen, audition to casting, REDSKY is your destination for cinematic
-          expertise, where dreams are realized, and talents find their true
-          expressions. Welcome to REDSKY Studios - where every story begins, and
-          every performance becomes a masterpiece.
-        </p>
-      </div>
+    </div>
+    <div class="about-container container">
+      <p class="redsky-description">
+        Welcome to REDSKY, a new and unparalleled fusion of cinematic
+        excellence, audion innovation and casting brilliance. At REDSKY, we are
+        not just a movie studio; we are a visionary and comprehensive
+        destination for the entire filmmaking journey.
+        <br />
+        <br />
+        REDSKY stands at the forefront of cinematic innovation, weaving
+        narratives that give an immense impact to our audience through our
+        creative minds. Each of our work is a testament to our dedication to
+        redefining the cinematic perspective.
+        <br />
+        <br />
+        At REDSKY, we believe in pushing the boundaries of storytelling,
+        transcending conventional narratives to create unforgettable cinematic
+        experiences. Our team of passionate filmmakers, visionaries, and
+        storytellers collaborate to bring bold ideas to life, blending
+        cutting-edge technology with the artistry of filmmaking.
+        <br />
+        <br />
+        REDSKY has collaborated with many established and globally known actors,
+        writers, photographers, audio engineers, artists and partners in the
+        film industry from Norway, Spain and America. From script to screen,
+        audition to casting, REDSKY is your destination for cinematic expertise,
+        where dreams are realized, and talents find their true expressions.
+        Welcome to REDSKY Studios - where every story begins, and every
+        performance becomes a masterpiece.
+      </p>
 
       <footer>
         <div class="social-media">
