fixed contact.html and about.html and css

--- a/about.html
+++ b/about.html
@@ -64,11 +64,12 @@
         </div>
       </div>
     </nav>
-    <div class="hero">
-      <h1 class="about-title">
-        <img src="images/about.png" alt="REDSKY About logo" width="150" />
-      </h1>
-    </div>
+    <div class="content-container container">
+      <div class="content">
+        <h1>
+          <img src="images/about.png" alt="REDSKY About logo" width="150" />
+        </h1>
+      </div>
     <div class="about-container container">
       <p class="redsky-description">
         Welcome to REDSKY, a new and unparalleled fusion of cinematic
