--- a/contact.html
+++ b/contact.html
@@ -64,12 +64,15 @@
         </div>
       </div>
     </nav>
-    <div class="hero">
-      <h1 class="work-projects">
+    <div class="content-container container">
+        <div class="content">
+        <h1 class="work-projects">
         <img src="images/about.png" alt="REDSKY About logo" width="150" />
-        Contact
       </h1>
-      >
+      <h3>Email contact</h3>
+      <p>Mats Bjørseth <a href="mailto:mats86@live.no">mats86@live.no</a></p>
+      <h3>Telephone number</h3>
+      <p>+47 952 05 161</p>
     </div>
     <footer>
       <div class="social-media">
@@ -87,6 +90,8 @@
             <i class="fa-brands fa-2x fa-x-twitter"></i>
           </a>
         </div>
+        </div>
+      
       </div>
     </footer>
   </body>
