added studio photos in about.html

--- a/about.html
+++ b/about.html
@@ -102,6 +102,12 @@
         performance becomes a masterpiece.
       </p>
 
+      <div class="studio-images">
+        <img src="images/studio.jpg" class="img-fluid" alt="">
+        <img src="images/studio3.jpg" class="img-fluid" alt="">
+        <img src="images/studio2.jpg" class="img-fluid" alt="">
+      </div>
+
       <footer>
         <div class="social-media">
           <div class="d-flex justify-content-evenly">
