--- a/work.html
+++ b/work.html
@@ -151,23 +151,25 @@
         </div>
       </div>
     </div>
-    <footer>
-      <div class="social-media">
-        <div class="d-flex justify-content-evenly">
-          <a
-            href="https://www.instagram.com/redsky.no/"
-            class="bt btn-branding"
-          >
-            <i class="fa-brands fa-2x fa-instagram"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/redsky/">
-            <i class="fa-brands fa-2x fa-linkedin"></i>
-          </a>
-          <a href="">
-            <i class="fa-brands fa-2x fa-x-twitter"></i>
-          </a>
+    <div class="footer-nav">
+      <footer>
+        <div class="social-media">
+          <div class="d-flex justify-content-evenly">
+            <a
+              href="https://www.instagram.com/redsky.no/"
+              class="bt btn-branding"
+            >
+              <i class="fa-brands fa-2x fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/redsky/">
+              <i class="fa-brands fa-2x fa-linkedin"></i>
+            </a>
+            <a href="">
+              <i class="fa-brands fa-2x fa-x-twitter"></i>
+            </a>
+          </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
