fixed about.html, images, css

--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
             src="images/navbar.png"
             class="img-fluid"
             alt="REDSKY navbar logo"
-            width="70"
+            width="50"
           />
         </a>
         <button
@@ -118,8 +118,8 @@
           <h3 class="text-center mb-0">phillip:Ines</h3>
         </div>
         <div class="col-sm-4 mb-4">
-          <img src="images/sorry.jpg" class="img-fluid" alt="Sorry" />
-          <h3 class="text-center mb-0">Sorry</h3>
+          <img src="images/sorry.jpg" class="img-fluid" alt="SORRY" />
+          <h3 class="text-center mb-0">SORRY</h3>
         </div>
         <div class="col-sm-4 mb-4">
           <img
@@ -146,8 +146,8 @@
           <h3 class="text-center mb-0">When Are You Coming Home</h3>
         </div>
         <div class="col-sm-4 mb-4">
-          <img src="images/lollipop.jpg" class="img-fluid" alt="Lollipop" />
-          <h3 class="text-center mb-0">Lollipop</h3>
+          <img src="images/lollipop.jpg" class="img-fluid" alt="LOLLIPOP" />
+          <h3 class="text-center mb-0">LOLLIPOP</h3>
         </div>
       </div>
     </div>
