--- a/about.html
+++ b/about.html
@@ -68,6 +68,9 @@
     </nav>
     <div class="content-container container">
       <div class="content">
+        <h1>
+          <img src="images/about.png" alt="REDSKY About logo" width="150" />
+        </h1>
       </div>
     <div class="about-container container">
       <p class="redsky-description">
