--- a/index.html
+++ b/index.html
@@ -39,14 +39,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img
-            src="images/navbar.png"
-            class="img-fluid"
-            alt="REDSKY navbar logo"
-            width="100"
-          />
-        </a>
+        <a class="navbar-brand" href="#"> </a>
         <button
           class="navbar-toggler"
           type="button"
