--- a/work.html
+++ b/work.html
@@ -26,14 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img
-            src="images/navbar.png"
-            class="img-fluid"
-            alt="REDSKY navbar logo"
-            width="100"
-          />
-        </a>
+        <a class="navbar-brand" href="#"> </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -74,7 +67,7 @@
             class="img-fluid"
             alt="Tangles Senses"
           />
-          <h3 class="text-center mb-0">Tangles Senses(short)</h3>
+          <h3 class="text-center mb-0">Tangled Senses(short)</h3>
         </div>
         <div class="col-sm-4 mb-4">
           <img
