edited footer and css

--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
         <p class="projects">
           Upcoming projects by REDSKY will be announced soon.
         </p>
+        </div>
+        </div>
         <footer>
           <div class="social-media">
-            <div class="d-flex justify-content-evenly">
+            <div class="d-flex justify-content-center">
               <a
                 href="https://www.instagram.com/redsky.no/"
                 class="bt btn-branding"
