--- a/work.html
+++ b/work.html
@@ -139,7 +139,7 @@
         </div>
       </div>
     </div>
-    <div class="footer-nav">
+    <div class="footer-work-page">
       <footer>
         <div class="social-media">
           <div class="d-flex justify-content-evenly">
