--- a/about.html
+++ b/about.html
@@ -44,17 +44,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About REDSKY</a>
+              <a class="nav-link" href="about.html" title="About REDSKY">About REDSKY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Our Work</a>
+              <a class="nav-link" href="work.html" title="About REDSKY Work">Our Work</a>
             </li>
             <li></li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
             </li>
           </ul>
         </div>
@@ -102,24 +102,24 @@
         <img src="images/studio2.jpg" class="img-fluid" alt="">
       </div>
 
-      <footer>
-        <div class="social-media">
-          <div class="d-flex justify-content-evenly">
-            <a
-              href="https://www.instagram.com/redsky.no/"
-              class="bt btn-branding"
-            >
-              <i class="fa-brands fa-2x fa-instagram"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/redsky/">
-              <i class="fa-brands fa-2x fa-linkedin"></i>
-            </a>
-            <a href="">
-              <i class="fa-brands fa-2x fa-x-twitter"></i>
-            </a>
+       <footer>
+          <div class="social-media">
+            <div class="d-flex justify-content-center">
+              <a
+                href="https://www.instagram.com/redsky.no/"
+                class="bt btn-branding"
+              >
+                <i class="fa-brands fa-2x fa-instagram"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/redsky/">
+                <i class="fa-brands fa-2x fa-linkedin"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-2x fa-x-twitter"></i>
+              </a>
+            </div>
           </div>
-        </div>
-      </footer>
+        </footer>
     </div>
   </body>
 </html>
