--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="desscription" content="REDSKY is a movie studio, and at the same time is an audition and casting studio for actors who want to further their career in film industry." />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -20,13 +20,12 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Contact Page</title>
+    <title>REDSKY - a movie, audition and casting studio</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-         
         </a>
         <button
           class="navbar-toggler"
@@ -44,17 +43,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About REDSKY</a>
+              <a class="nav-link" href="about.html" title="About REDSKY">About REDSKY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Our Work</a>
+              <a class="nav-link" href="work.html" title="About REDSKY Work">Our Work</a>
             </li>
             <li></li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
             </li>
           </ul>
         </div>
@@ -70,25 +69,23 @@
       <h3>Telephone number</h3>
       <p>+47 952 05 161</p>
     </div>
-    <footer>
-      <div class="social-media">
-        <div class="d-flex justify-content-evenly">
-          <a
-            href="https://www.instagram.com/redsky.no/"
-            class="bt btn-branding"
-          >
-            <i class="fa-brands fa-2x fa-instagram"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/redsky/">
-            <i class="fa-brands fa-2x fa-linkedin"></i>
-          </a>
-          <a href="">
-            <i class="fa-brands fa-2x fa-x-twitter"></i>
-          </a>
-        </div>
-        </div>
-      
-      </div>
-    </footer>
+     <footer>
+          <div class="social-media">
+            <div class="d-flex justify-content-center">
+              <a
+                href="https://www.instagram.com/redsky.no/"
+                class="bt btn-branding"
+              >
+                <i class="fa-brands fa-2x fa-instagram"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/redsky/">
+                <i class="fa-brands fa-2x fa-linkedin"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-2x fa-x-twitter"></i>
+              </a>
+            </div>
+          </div>
+        </footer>
   </body>
 </html>
