--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About REDSKY</a>
+              <a class="nav-link" href="about.html" title="About REDSKY">About REDSKY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Our Work</a>
+              <a class="nav-link" href="work.html" title="About REDSKY Work">Our Work</a>
             </li>
             <li></li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
             </li>
           </ul>
         </div>
