--- a/work.html
+++ b/work.html
@@ -74,7 +74,7 @@
         </div>
       </div>
     </nav>
-    <div class="content-container container">
+    <div class="content-container container text-center">
       <div class="row">
         <div class="col-sm-4 mb-4">
           <img
@@ -83,6 +83,9 @@
             alt="Tangles Senses"
           />
           <h3 class="text-center mb-0">Tangled Senses(short)</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img
@@ -91,18 +94,30 @@
             alt="A Walk in the Park"
           />
           <h3 class="text-center mb-0">A Walk In The Park</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img src="images/amsterdam.jpg" class="img-fluid" alt="Amsterdam" />
           <h3 class="text-center mb-0">Amsterdam</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img src="images/bermuda.jpg" class="img-fluid" alt="Bermuda" />
           <h3 class="text-center mb-0">Bermuda</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img src="images/grace.jpg" class="img-fluid" alt="Grace" />
           <h3 class="text-center mb-0">Grace</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img
@@ -111,6 +126,9 @@
             alt="Misunderstood"
           />
           <h3 class="text-center mb-0">Misunderstood</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img
@@ -119,10 +137,16 @@
             alt="phillip:Ines"
           />
           <h3 class="text-center mb-0">phillip:Ines</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img src="images/sorry.jpg" class="img-fluid" alt="SORRY" />
           <h3 class="text-center mb-0">SORRY</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img
@@ -131,6 +155,9 @@
             alt="The Last Man In Laos"
           />
           <h3 class="text-center mb-0">The Last Man In Laos</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img
@@ -139,6 +166,9 @@
             alt="The Long Way Home"
           />
           <h3 class="text-center mb-0">The Long Way Home</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img
@@ -147,10 +177,16 @@
             alt="When Are You Coming Home"
           />
           <h3 class="text-center mb-0">When Are You Coming Home</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
         <div class="col-sm-4 mb-4">
           <img src="images/lollipop.jpg" class="img-fluid" alt="LOLLIPOP" />
           <h3 class="text-center mb-0">LOLLIPOP</h3>
+          <button type="button" class="btn btn-secondary btn-sm">
+            Read more
+          </button>
         </div>
       </div>
     </div>
