--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="desscription about REDSKY" content="Read more about what REDSKY is all about." />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -97,9 +97,9 @@
       </p>
 
       <div class="studio-images">
-        <img src="images/studio.jpg" class="img-fluid" alt="">
-        <img src="images/studio3.jpg" class="img-fluid" alt="">
-        <img src="images/studio2.jpg" class="img-fluid" alt="">
+        <img src="images/studio.jpg" class="img-fluid" alt="Studio Image">
+        <img src="images/studio3.jpg" class="img-fluid" alt="Studio Image">
+        <img src="images/studio2.jpg" class="img-fluid" alt="Studio Image">
       </div>
 
        <footer>
@@ -108,13 +108,14 @@
               <a
                 href="https://www.instagram.com/redsky.no/"
                 class="bt btn-branding"
+                title="REDSKY Instagram"
               >
                 <i class="fa-brands fa-2x fa-instagram"></i>
               </a>
-              <a href="https://www.linkedin.com/in/redsky/">
+              <a href="https://www.linkedin.com/in/redsky/" title="REDSKY LinkedIn">
                 <i class="fa-brands fa-2x fa-linkedin"></i>
               </a>
-              <a href="">
+              <a href="" title="REDSKY X">
                 <i class="fa-brands fa-2x fa-x-twitter"></i>
               </a>
             </div>
