--- a/index.html
+++ b/index.html
@@ -88,13 +88,14 @@
               <a
                 href="https://www.instagram.com/redsky.no/"
                 class="bt btn-branding"
+                title="REDSKY Instagram"
               >
                 <i class="fa-brands fa-2x fa-instagram"></i>
               </a>
-              <a href="https://www.linkedin.com/in/redsky/">
+              <a href="https://www.linkedin.com/in/redsky/" title="REDSKY LinkedIn">
                 <i class="fa-brands fa-2x fa-linkedin"></i>
               </a>
-              <a href="">
+              <a href="" title="REDSKY X">
                 <i class="fa-brands fa-2x fa-x-twitter"></i>
               </a>
             </div>
