--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="desscription" content="REDSKY is a movie studio, and at the same time is an audition and casting studio for actors who want to further their career in film industry." />
+    <meta name="desscription" content="Contact Information for inquiries to REDSKY." />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -20,7 +20,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>REDSKY - a movie, audition and casting studio</title>
+    <title>Contact Information to REDSKY</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -62,10 +62,10 @@
     <div class="content-container container">
         <div class="content">
         <h1 class="work-projects">
-        <img src="images/about.png" alt="REDSKY About logo" width="150" />
+        <img src="images/about.png" alt="REDSKY Logo" width="150" />
       </h1>
       <h3>Email contact</h3>
-      <p>Mats Bjørseth <a href="mailto:mats86@live.no">mats86@live.no</a></p>
+      <p>Mats Bjørseth <a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
       <h3>Telephone number</h3>
       <p>+47 952 05 161</p>
     </div>
@@ -75,13 +75,14 @@
               <a
                 href="https://www.instagram.com/redsky.no/"
                 class="bt btn-branding"
+                title="REDSKY Instagram"
               >
                 <i class="fa-brands fa-2x fa-instagram"></i>
               </a>
-              <a href="https://www.linkedin.com/in/redsky/">
+              <a href="https://www.linkedin.com/in/redsky/" title="REDSKY LinkedIn">
                 <i class="fa-brands fa-2x fa-linkedin"></i>
               </a>
-              <a href="">
+              <a href="" title="REDSKY X">
                 <i class="fa-brands fa-2x fa-x-twitter"></i>
               </a>
             </div>
