--- a/work.html
+++ b/work.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="our work"
+      content="Here are the work projects REDSKY has produced so far."
+    />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -21,7 +24,7 @@
       src="https://kit.fontawesome.com/d8d89c7f5e.js"
       crossorigin="anonymous"
     ></script>
-    <title>Projects by REDSKY</title>
+    <title>Work Projects by REDSKY</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
@@ -197,13 +200,17 @@
             <a
               href="https://www.instagram.com/redsky.no/"
               class="bt btn-branding"
+              title="REDSKY Instagram"
             >
               <i class="fa-brands fa-2x fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/in/redsky/">
+            <a
+              href="https://www.linkedin.com/in/redsky/"
+              title="REDSKY LinkedIn"
+            >
               <i class="fa-brands fa-2x fa-linkedin"></i>
             </a>
-            <a href="">
+            <a href="" title="REDSKY X">
               <i class="fa-brands fa-2x fa-x-twitter"></i>
             </a>
           </div>
