moved github, open source to contact.html

--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,13 @@
               </a>
             </div>
           </div>
+            <div class="d-flex justify-content-center">
+            <span>
+                This website was coded by <a href="https://www.instagram.com/yourgurljd/" class="coders-link" title="Instagram page of JD Apirinya">JD</a>
+                open source on <a href="https://github.com/JDASL/porfolio-project.git" class="coders-link" title="GitHub page for portfolio project" class="coders-link">GitHub</a> and hosted on <a href="https://portfolio-redsky-project.netlify.app/" class="coders-link" title="Netlify Page for REDSKY">Netlify</a>
+            </span>
+          </div>
         </footer>
+         
   </body>
 </html>
