--- a/about.html
+++ b/about.html
@@ -26,8 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
-        
-        </a>
+        <a class="navbar-brand" href="#"></a>
         <button
           class="navbar-toggler"
           type="button"
