--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
       </div>
     </nav>
     <div class="content-container container">
-        <div class="content">
+        <div class="content mt-5">
         <h1 class="work-projects">
         <img src="images/about.png" alt="REDSKY Logo" width="150" />
       </h1>
