changed name div on contact.html

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         </div>
       </div>
     </nav>
-    <div class="content-container container">
+    <div class="contact-container container">
         <div class="content mt-5">
         <h1 class="work-projects">
         <img src="images/about.png" alt="REDSKY Logo" width="150" />
