added fb button, studio.html, edited about.html

--- a/about.html
+++ b/about.html
@@ -51,7 +51,9 @@
             <li class="nav-item">
               <a class="nav-link" href="work.html" title="About REDSKY Work">Our Work</a>
             </li>
-            <li></li>
+              <li class="nav-item">
+              <a class="nav-link" href="studio.html" title="Our Studio">Our Studio</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
             </li>
@@ -88,38 +90,37 @@
         <br />
         REDSKY has collaborated with many established and globally known actors,
         writers, photographers, audio engineers, artists and partners in the
-        film industry from Norway, Spain and America. From script to screen,
+        film industry from Norway, Spain, Sweden, UK and America. From script to screen,
         audition to casting, REDSKY is your destination for cinematic expertise,
         where dreams are realized, and talents find their true expressions.
         Welcome to REDSKY Studios - where every story begins, and every
         performance becomes a masterpiece.
       </p>
-
-      <div class="studio-images">
-        <img src="images/studio.jpg" class="img-fluid" alt="Studio Image">
-        <img src="images/studio3.jpg" class="img-fluid" alt="Studio Image">
-        <img src="images/studio2.jpg" class="img-fluid" alt="Studio Image">
       </div>
-
-       <footer>
-          <div class="social-media">
-            <div class="d-flex justify-content-center">
-              <a
-                href="https://www.instagram.com/redsky.no/"
-                class="bt btn-branding"
-                title="REDSKY Instagram"
-              >
-                <i class="fa-brands fa-2x fa-instagram"></i>
-              </a>
-              <a href="https://www.linkedin.com/in/redsky/" title="REDSKY LinkedIn">
-                <i class="fa-brands fa-2x fa-linkedin"></i>
-              </a>
-              <a href="" title="REDSKY X">
-                <i class="fa-brands fa-2x fa-x-twitter"></i>
-              </a>
-            </div>
-          </div>
-        </footer>
-    </div>
+      <footer>
+      <div class="social-media">
+        <div>
+          <p class="follow-us" title="Follow us">Follow us</p>
+        </div>
+        <div class="d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/redsky.no/"
+            class="bt btn-branding"
+            title="REDSKY Instagram"
+          >
+            <i class="fa-brands fa-2x fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/redsky/" title="REDSKY LinkedIn">
+            <i class="fa-brands fa-2x fa-linkedin"></i>
+          </a>
+          <a href="" title="REDSKY X">
+            <i class="fa-brands fa-2x fa-x-twitter"></i>
+          </a>
+          <a href="" title="Redsky Facebook">
+            <i class="fa-brands fa-2x fa-facebook-f"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
