--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,9 @@
             <li class="nav-item">
               <a class="nav-link" href="work.html" title="About REDSKY Work">Our Work</a>
             </li>
-            <li></li>
+            <li class="nav-item">
+              <a class="nav-link" href="studio.html" title="Our Studio">Our Studio</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
             </li>
@@ -69,31 +71,31 @@
       <h3>Telephone number</h3>
       <p>+47 952 05 161</p>
     </div>
-     <footer>
-          <div class="social-media">
-            <div class="d-flex justify-content-center">
-              <a
-                href="https://www.instagram.com/redsky.no/"
-                class="bt btn-branding"
-                title="REDSKY Instagram"
-              >
-                <i class="fa-brands fa-2x fa-instagram"></i>
-              </a>
-              <a href="https://www.linkedin.com/in/redsky/" title="REDSKY LinkedIn">
-                <i class="fa-brands fa-2x fa-linkedin"></i>
-              </a>
-              <a href="" title="REDSKY X">
-                <i class="fa-brands fa-2x fa-x-twitter"></i>
-              </a>
-            </div>
-          </div>
-            <div class="d-flex justify-content-center">
-            <span>
-                This website was coded by <a href="https://www.instagram.com/yourgurljd/" class="coders-link" title="Instagram page of JD Apirinya">JD</a>
-                open source on <a href="https://github.com/JDASL/porfolio-project.git" class="coders-link" title="GitHub page for portfolio project" class="coders-link">GitHub</a> and hosted on <a href="https://portfolio-redsky-project.netlify.app/" class="coders-link" title="Netlify Page for REDSKY">Netlify</a>
-            </span>
-          </div>
-        </footer>
+    <footer>
+      <div class="social-media">
+        <div>
+          <p class="follow-us" title="Follow us">Follow us</p>
+        </div>
+        <div class="d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/redsky.no/"
+            class="bt btn-branding"
+            title="REDSKY Instagram"
+          >
+            <i class="fa-brands fa-2x fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/redsky/" title="REDSKY LinkedIn">
+            <i class="fa-brands fa-2x fa-linkedin"></i>
+          </a>
+          <a href="" title="REDSKY X">
+            <i class="fa-brands fa-2x fa-x-twitter"></i>
+          </a>
+          <a href="" title="Redsky Facebook">
+            <i class="fa-brands fa-2x fa-facebook-f"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
          
   </body>
 </html>
