--- a/studio.html
+++ b/studio.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="REDSKY" content="REDSKY official website" />
+    <meta
+      name="REDSKY Studio"
+      content="REDSKY Studio is the most essential part of the company."
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -94,11 +97,20 @@
     <div class="hero">
       <div class="home-container container">
         <img src="images/main.png" class="main-logo" alt="REDSKY logo" />
-        <p class="introduction">The official website for REDSKY.no</p>
-
-        <p class="projects">
-          Upcoming projects by REDSKY will be announced soon.
-        </p>
+        <p class="introduction">Our Studio</p>
+        <div class="studio-images">
+          <img src="images/studio.jpg" class="img-fluid" alt="Studio Photo 1" />
+          <img
+            src="images/studio3.jpg"
+            class="img-fluid"
+            alt="Studio Photo 2"
+          />
+          <img
+            src="images/studio2.jpg"
+            class="img-fluid"
+            alt="Studio Photo 3"
+          />
+        </div>
       </div>
     </div>
     <footer>
