--- a/work.html
+++ b/work.html
@@ -64,7 +64,11 @@
                 >Our Work</a
               >
             </li>
-            <li></li>
+            <li class="nav-item">
+              <a class="nav-link" href="studio.html" title="Our Studio"
+                >Our Studio</a
+              >
+            </li>
             <li class="nav-item">
               <a
                 class="nav-link"
