--- a/studio.html
+++ b/studio.html
@@ -94,23 +94,14 @@
         </div>
       </div>
     </nav>
-    <div class="hero">
-      <div class="home-container container">
-        <img src="images/main.png" class="main-logo" alt="REDSKY logo" />
-        <p class="introduction">Our Studio</p>
-        <div class="studio-images">
-          <img src="images/studio.jpg" class="img-fluid" alt="Studio Photo 1" />
-          <img
-            src="images/studio3.jpg"
-            class="img-fluid"
-            alt="Studio Photo 2"
-          />
-          <img
-            src="images/studio2.jpg"
-            class="img-fluid"
-            alt="Studio Photo 3"
-          />
-        </div>
+    <div class="content">
+      <img src="images/about.png" alt="REDSKY About logo" width="150" />
+
+      <p class="introduction">Our Studio</p>
+      <div class="studio-images">
+        <img src="images/studio.jpg" class="img-fluid" alt="Studio Photo 1" />
+        <img src="images/studio3.jpg" class="img-fluid" alt="Studio Photo 2" />
+        <img src="images/studio2.jpg" class="img-fluid" alt="Studio Photo 3" />
       </div>
     </div>
     <footer>
