--- a/about.html
+++ b/about.html
@@ -54,6 +54,11 @@
               <li class="nav-item">
               <a class="nav-link" href="studio.html" title="Our Studio">Our Studio</a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link" href="us.html" title="About REDSKY Associates"
+                >Who Are We</a
+              >
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
             </li>
