--- a/us.html
+++ b/us.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="desscription" content="Contact Information for inquiries to REDSKY." />
+    <meta
+      name="REDSKY Studio"
+      content="REDSKY Studio is the most essential part of the company."
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -13,6 +16,19 @@
       src="https://kit.fontawesome.com/d8d89c7f5e.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -20,13 +36,13 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Contact Information to REDSKY</title>
+
+    <title>REDSKY</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-        </a>
+        <a class="navbar-brand" href="#"> </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,46 +53,61 @@
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon">
-            <i class="fas fa-bars" style="color:#fff; font-size:28px;"></i>
+            <i class="fas fa-bars" style="color: #fff; font-size: 28px"></i>
           </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About REDSKY">About REDSKY</a>
+              <a class="nav-link" href="about.html" title="About REDSKY"
+                >About REDSKY</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="About REDSKY Work">Our Work</a>
+              <a class="nav-link" href="work.html" title="About REDSKY Work"
+                >Our Work</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="studio.html" title="Our Studio">Our Studio</a>
+              <a class="nav-link" href="studio.html" title="Our Studio"
+                >Our Studio</a
+              >
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="us.html" title="About REDSKY Associates"
                 >Who Are We</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html" title="About Contact Information">Contact</a>
+              <a
+                class="nav-link"
+                href="contact.html"
+                title="About Contact Information"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="contact-container container">
-        <div class="content mt-5">
-        <h1 class="work-projects">
-        <img src="images/about.png" alt="REDSKY Logo" width="150" />
-      </h1>
-      <h3>Email contact</h3>
-      <p>Mats Bjørseth <a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
-      <h3>Telephone number</h3>
-      <p>+47 952 05 161</p>
+    <div class="content">
+      <img src="images/mats.jpeg" alt="REDSKY CEO" width="150" />
+
+      <p class="CEO Mats">CEO</p>
+      <button type="button" class="btn btn-secondary btn-sm mb-5">
+        Read more
+      </button>
     </div>
-    <footer>
+    <footer class="">
       <div class="social-media">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
@@ -101,6 +132,5 @@
         </div>
       </div>
     </footer>
-         
   </body>
 </html>
