--- a/work.html
+++ b/work.html
@@ -70,6 +70,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="us.html" title="About REDSKY Associates"
+                >Who Are We</a
+              >
+            </li>
+            <li class="nav-item">
               <a
                 class="nav-link"
                 href="contact.html"
