changed Who are we to Us

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             </li>
              <li class="nav-item">
               <a class="nav-link" href="us.html" title="About REDSKY Associates"
-                >Who Are We</a
+                >Us</a
               >
             </li>
             <li class="nav-item">
@@ -76,7 +76,7 @@
       <h3>Telephone number</h3>
       <p>+47 952 05 161</p>
     </div>
-    <footer>
+    <footer class="text-center">
       <div class="social-media">
         <div>
           <p class="follow-us" title="Follow us">Follow us</p>
