--- a/us.html
+++ b/us.html
@@ -100,7 +100,7 @@
       </div>
     </nav>
     <div class="content">
-      <img src="images/mats.jpeg" alt="REDSKY CEO" width="150" />
+      <img src="images/mats.ceo.jpeg" alt="REDSKY CEO" width="300" />
 
       <p class="CEO Mats">CEO</p>
       <button type="button" class="btn btn-secondary btn-sm mb-5">
