--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-
     <script
       src="https://kit.fontawesome.com/d8d89c7f5e.js"
       crossorigin="anonymous"
@@ -75,6 +74,10 @@
       <p>Mats Bjørseth <a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
       <h3>Telephone number</h3>
       <p>+47 952 05 161</p>
+      <div>
+        <h3>Our address</h3>
+        <img src="images/plaza.sol.5.png" alt="Our office address" width="100">
+      </div>
     </div>
     <footer class="text-center">
       <div class="social-media">
