--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,8 @@
       <p>+47 952 05 161</p>
       <div>
         <h3>Our address</h3>
-        <img src="images/plaza.sol.5.png" alt="Our office address" width="300">
+        <img src="images/plaza.sol.5.png" alt="Our office address" width="350">
+        <p class="address" title="address">Plaza sol 5, Alicante</p>
       </div>
     </div>
     <footer class="text-center">
