--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
       <div>
         <h3>Our address</h3>
         <img src="images/plaza.sol.5.png" alt="Our office address" width="450">
-        <p class="address" title="address">Plaza sol 5, Alicante</p>
+        <p class="address" title="address">Plaza sol 5, 03012 Alicante</p>
       </div>
     </div>
     <footer class="text-center">
