fixed css contact.html

--- a/contact.html
+++ b/contact.html
@@ -71,14 +71,14 @@
         <img src="images/about.png" alt="REDSKY Logo" width="150" />
       </h1>
       <h3>Email contact</h3>
-      <p>Mats Bjørseth <a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
+      <p class="ceo-contact">Mats Bjørseth <a href="mailto:mats86@live.no" title="Email Mats Bjørseth">mats86@live.no</a></p>
       <h3>Telephone number</h3>
-      <p>+47 952 05 161</p>
+      <p class="ceo-number">+47 952 05 161</p>
       <div>
         <h3>Our address</h3>
         <img src="images/plaza.sol.5.png" alt="Our office address" width="450">
-        <p class="address" title="address">Plaza del Sol 5, 03012 Alicante</p>
-        <p class="text-center">Spain</p>
+        <p class="office-address" title="address">Plaza del Sol 5, 03012 Alicante</p>
+        <p class="office-country">Spain</p>
 
       </div>
     </div>
